--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <blockquote class="pix-embed-wrap"><div class="pix-embed-activity" data-id="sr2cade5f2338aws3" data-width="256" data-height="256" data-type="art" data-theme="light" data-show-edit="1">Pixilart Embed</div></blockquote><script async="async" src="https://www.pixilart.com/js/embed.js?v=1.0.4"></script>
-    <title>Ameesa's Website for HTTP5114</title>
+   <title>Ameesa's Website for HTTP5114</title>
 </head>
 <body>
     <div>
-        <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif;" style="color:rebeccapurple;" style="font-weight: 400;">Welcome! Thanks for stopping by! My name is Ameesa Bajwa</h1>
+        <h1 style="font-family:Verdana, Geneva, Tahoma, sans-serif;" style="background-color:rebeccapurple;" style="font-weight: 400;">Welcome! Thanks for stopping by! My name is Ameesa Bajwa.</h1>
         <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;" style="">Connect with me on:</h2>
-        <p><a href="#" img src="images/github.svg">Github</a></p>
-        <p><a href="#" img src="images/linkedin.svg">LinkedIn</a></p>
+        <p>
+            <a href="#"><img src="images/github.svg"height="40" width="40">Github</a>
+            <a href="#"><img src="images/linkedin.svg" height="40" width="40">LinkedIn</a>
+        </p>
     </div>
 </body>
 </html>
